log
Thu, Mar 20, 2025  6:24:29 PM: 
 tests:  1|4
total_score: 10/70
3f6cb15
Thu, Mar 20, 2025  6:42:34 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:30: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
    L = (List*) malloc(sizeof(List));
                              ^~~~
Compilation failed
f186d61
Thu, Mar 20, 2025  6:52:15 PM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:35: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
    L = (List*) malloc(10 * sizeof(List));
                                   ^~~~
exercises.c:53:17: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int num = (int*) malloc(i *sizeof(int));
                 ^
exercises.c:54:14: error: comparison between pointer and integer [-Werror]
       if(num == NULL){
              ^~
exercises.c:58:7: error: invalid type argument of unary '*' (have 'int')
       *num = i;
       ^~~~
exercises.c:59:16: error: expected expression before 'List'
       pushBack(List *L, void *num);
                ^~~~
exercises.c:59:7: error: too few arguments to function 'pushBack'
       pushBack(List *L, void *num);
       ^~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: declared here
 void pushBack(List *L, void *dato);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4335abf
Thu, Mar 20, 2025  6:53:22 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:47:35: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
    L = (List*) malloc(10 * sizeof(List));
                                   ^~~~
exercises.c:53:17: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int num = (int*) malloc(i *sizeof(int));
                 ^
exercises.c:54:14: error: comparison between pointer and integer [-Werror]
       if(num == NULL){
              ^~
exercises.c:58:7: error: invalid type argument of unary '*' (have 'int')
       *num = i;
       ^~~~
exercises.c:59:16: error: expected expression before 'List'
       pushBack(List *L, void *num);
                ^~~~
exercises.c:59:7: error: too few arguments to function 'pushBack'
       pushBack(List *L, void *num);
       ^~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: declared here
 void pushBack(List *L, void *dato);
      ^~~~~~~~
In file included from test.c:5:0:
exercises.c:60:12: error: passing argument 1 of 'free' makes pointer from integer without a cast [-Werror=int-conversion]
       free(num);
            ^~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:487:39: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void free (void *);
                                       ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7a6fa02
Thu, Mar 20, 2025  6:54:39 PM: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:48:17: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int num = (int*) malloc(i *sizeof(int));
                 ^
exercises.c:49:14: error: comparison between pointer and integer [-Werror]
       if(num == NULL){
              ^~
exercises.c:53:7: error: invalid type argument of unary '*' (have 'int')
       *num = i;
       ^~~~
exercises.c:54:16: error: expected expression before 'List'
       pushBack(List *L, void *num);
                ^~~~
exercises.c:54:7: error: too few arguments to function 'pushBack'
       pushBack(List *L, void *num);
       ^~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: declared here
 void pushBack(List *L, void *dato);
      ^~~~~~~~
In file included from test.c:5:0:
exercises.c:55:12: error: passing argument 1 of 'free' makes pointer from integer without a cast [-Werror=int-conversion]
       free(num);
            ^~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:487:39: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void free (void *);
                                       ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
06f07fb
Thu, Mar 20, 2025  7:03:56 PM: 
 exercises.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
total_score: 10/70
667f70e
Thu, Mar 20, 2025  7:17:11 PM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:72:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *dato = next(L);
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
71cf787
Thu, Mar 20, 2025  7:18:21 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
019b401
Thu, Mar 20, 2025  9:17:02 PM: 
 exercises.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
08ae0f9
Fri, Mar 21, 2025 10:15:53 AM: 
 exercises.c | 37 +++++++++++++++++++++++++++++++++++--
 1 file changed, 35 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:141:23: error: passing argument 1 of 'first' from incompatible pointer type [-Werror=incompatible-pointer-types]
    char *dato = first(cadena);
                       ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:10:7: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 void* first(List *L);
       ^~~~~
In file included from test.c:5:0:
exercises.c:144:19: error: passing argument 1 of 'next' from incompatible pointer type [-Werror=incompatible-pointer-types]
       dato = next(cadena);
                   ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:14:7: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 void* next(List *L);
       ^~~~
In file included from test.c:5:0:
exercises.c:147:16: error: passing argument 1 of 'next' from incompatible pointer type [-Werror=incompatible-pointer-types]
    dato = next(cadena);
                ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:14:7: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 void* next(List *L);
       ^~~~
In file included from test.c:5:0:
exercises.c:150:19: error: passing argument 1 of 'next' from incompatible pointer type [-Werror=incompatible-pointer-types]
       dato = next(cadena);
                   ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:14:7: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 void* next(List *L);
       ^~~~
In file included from test.c:5:0:
exercises.c:159:18: error: comparison between pointer and integer [-Werror]
       if(top(P1) == '('){
                  ^~
exercises.c:160:21: error: comparison between pointer and integer [-Werror]
          if(top(P2) != ')') return 0;
                     ^~
exercises.c:162:23: error: comparison between pointer and integer [-Werror]
       else if(top(P1) == '['){
                       ^~
exercises.c:163:21: error: comparison between pointer and integer [-Werror]
          if(top(P2) != ']') return 0;
                     ^~
exercises.c:166:21: error: comparison between pointer and integer [-Werror]
          if(top(P2) != '}') return 0;
                     ^~
cc1.exe: all warnings being treated as errors
Compilation failed
3252530
